--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" charset="utf-8">
 
 	// variables
-	var w = window.innerWidth, h = window.innerHeight + 100;
+	var w = window.innerWidth, h = window.innerHeight + 150;
 
 	var vis = d3.select("body").append("svg:svg").attr("width", w).attr("height", h);
 	var background = vis.append("g");
@@ -26,7 +26,7 @@
 	var links = [];
 
 	var USE_GRID = true;
-	var GRID_SIZE = 185;
+	var GRID_SIZE = 300;
 	var GRID_TYPE = "SHIFT_ODD_ROWS";
 	var NUMBER_OF_NODES = 2;
 
@@ -63,6 +63,7 @@ for (var i = 0; i < NUMBER_OF_NODES; i++) {
 	totem_idx_list = totem_idx_list.filter(function(value, index, arr){ return value != random_idx;})
 	var node = {
 		label : "node " + i,
+		url: "https://www.marulli.studio/product/totem-"+(random_idx+1),
 		totem: "totem_" + (random_idx + 1)
 	};
 	nodes.push(node);
@@ -92,13 +93,13 @@ var link = vis.selectAll("line.link").data(links).enter().append("svg:line").att
 
 var node = vis.selectAll("g.node").data(force.nodes()).enter().append("svg:g").attr("class", "node").style('cursor', 'pointer');
 node
-// .append("svg:a")
-  // .attr("xlink:href", function(d){return "https://stackoverflow.com/questions/13104681/hyperlinks-in-d3-js-objects";})
-	// .attr("target", "_blank")
+.append("svg:a")
+  .attr("xlink:href", function(d){return d.url;})
+	.attr("target", "_blank")
 .append("svg:image")
 .attr("xlink:href",  function(d, i) { return `./totems/${d.totem}.png`;})
-.attr("x", function(d) { return -150;})
-.attr("y", function(d) { return -150;})
+.attr("x", function(d) { return -300;})
+.attr("y", function(d) { return -300;})
 .attr("height", 450)
 .attr("width", 450);
 
