--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ node
 	.attr("height", 450)
 	.attr("width", 450)
 
-node.call(force.drag);
+// node.call(force.drag);
 
 var updateLink = function() {
 	this.attr("x1", function(d) {
